# lepp3

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  build.sh  calibrator-sample-cfg.toml  communicationtest.toml  detect_pcd.toml  detect_stream.toml  detector-sample-cfg.toml  detector-sample-euclid-cfg.toml  detector-sample-gmm-cfg.toml  lablolaiface-cfg.toml  lablolaiface-with-recording.toml  lola-sample-cfg.toml  master-cfg.toml  playback-sample-cfg.toml  playback.toml  plotHulls.sh  recorder-sample-cfg.toml  recorder.toml  robotServiceTest-cfg.toml  vision-pipeline-sample-cfg.toml
cmake/: FindLTTngUST.cmake
config/: artificial_pcd.toml  artificial_stream.toml  calibrator-sample-cfg.toml  communicationtest.toml  demoobst-cfg.toml  demosurf-cfg.toml  detector-sample-gmm-cfg.toml  home-demo-obst.toml  lab-camera-rig.toml  lab-lola.toml  lablolaiface-cfg.toml  lablolaiface-with-recording.toml  playback-test.toml  playback.toml  recorder.toml
examples/: Examples.txt  file_stream_example.cc  live_stream_example.cc
examples/recordingexample/: README.txt  cloud_0000.pcd  cloud_0001.pcd  (+3 more)
src/: CMakeLists.txt
src/config/: .FileConfigParser.hpp.swp  Context.hpp  FileConfigParser.hpp  HardcodedParser.hpp  Parser.h
src/lepp3/: BaseObstacleDetector.hpp  BaseSegmenter.hpp  BaseVideoSource.hpp  CalibrationAggregator.hpp  CameraCalibrator.hpp  ConvexHullAggregator.hpp  ConvexHullDetector.hpp  DiffAggregator.hpp  EuclideanPlaneSegmenter.hpp  FilteredVideoSource.hpp  FrameData.hpp  FrameDataObserver.hpp  FrameDataSubject.hpp  GMMObstacleTracker.hpp  GMMObstacleTrackerAggregator.hpp  GMMObstacleTrackerState.hpp  GnuplotWriter.hpp  GrabberVideoSource.hpp  KalmanObstacleTracker.cpp  KalmanObstacleTracker.hpp  LowPassObstacleTracker.hpp  MomentOfInertiaApproximator.hpp  NoopSegmenter.hpp  ObjectApproximator.hpp  ObstacleAggregator.hpp  ObstacleDetector.hpp  ObstacleEvaluator.hpp  ObstacleFilter.hpp  ObstacleTracker.hpp  PlaneInlierFinder.hpp  PostSurfaceAggregator.hpp  RGBData.hpp  SmoothObstacleAggregator.hpp  SplitApproximator.hpp  StairAggregator.hpp  SurfaceAggregator.hpp  SurfaceApproximator.hpp  SurfaceClusterer.hpp  SurfaceData.hpp  SurfaceDetector.hpp  (+10 more)
src/lepp3/debug/: timer.hpp
src/lepp3/detector/: main.cc
src/lepp3/filter/: BackgroundFilter.hpp  CropFilter.hpp  GroundFilter.hpp  PointFilter.hpp  SensorCalibrationFilter.hpp  TruncateFilter.hpp
src/lepp3/filter/cloud/post/: CloudPostFilter.hpp  ProbFilter.hpp  Pt1Filter.hpp
src/lepp3/filter/cloud/pre/: CloudPreFilter.hpp  DownsampleFilter.hpp
src/lepp3/filter/point/: BackgroundFilter.hpp  CropFilter.hpp  GroundFilter.hpp  PointFilter.hpp  SensorCalibrationFilter.hpp
src/lepp3/models/: Coordinate.h  Coordinate.h~  LolaKinematics.h  ObjectModel.h  ObjectModel.h~  SurfaceModel.h
src/lepp3/obstacles/object_approximator/: MomentOfInertiaApproximator.cpp  MomentOfInertiaApproximator.hpp  ObjectApproximator.cpp  ObjectApproximator.hpp
src/lepp3/obstacles/object_approximator/split/: CompositeSplitStrategy.cpp  CompositeSplitStrategy.hpp  SplitApproximator.cpp  SplitApproximator.hpp  SplitCondition.hpp  SplitConditions.hpp  SplitStrategy.cpp  SplitStrategy.hpp
src/lepp3/obstacles/segmenter/: Segmenter.cpp  Segmenter.hpp
src/lepp3/obstacles/segmenter/euclidean/: EuclideanSegmenter.cpp  EuclideanSegmenter.hpp
src/lepp3/obstacles/segmenter/gmm/: GmmData.hpp  GmmSegmenter.cpp  GmmSegmenter.hpp
src/lepp3/obstacles_new/: GMMObstacleTrackerState.hpp  ObstacleFilter.hpp  ObstacleTracker.hpp  ObstacleTrackerState.hpp  ObstacleTrackerVisualizer.hpp  VoxelGrid.h
src/lepp3/playback/: playback.cc
src/lepp3/pose/: PoseService.cpp  PoseService.hpp
src/lepp3/recorder/: recorder.cc
src/lepp3/util/: FileManager.hpp  OfflineVideoSource.hpp  PointCloudRecorder.hpp  Projection.cpp  Projection.h  Timer.hpp  VideoRecorder.hpp  VoxelGrid.cpp  VoxelGrid.h  VoxelGrid3D.cpp  VoxelGrid3D.h  lepp3_tracepoint_provider.cpp  lepp3_tracepoint_provider.hpp  util.h
src/lepp3/visualization/: ARVisualizer.hpp  BaseVisualizer.hpp  CalibratorVisualizer.hpp  EchoObserver.hpp  ImageVisualizer.hpp  LegacyVisualizer.hpp  ObsSurfVisualizer.cpp  ObsSurfVisualizer.hpp  ObstacleTrackerVisualizer.hpp  ObstacleVisualizer.hpp  StairVisualizer.hpp  SurfObstVisualizer.hpp  SurfaceVisualizer.hpp  Visualizer.hpp
src/lola/: LolaAggregator.cc  LolaAggregator.cpp  LolaAggregator.h  OdoCoordinateTransformer.hpp  PoseObserver.hpp  PoseService.cc  PoseService.cpp  PoseService.h  PoseService.h~  Robot.cpp  Robot.h  Robot.h~  RobotAggregator.cpp  RobotAggregator.h  RobotService.cc  RobotService.cpp  RobotService.h  Splitters.hpp  TransformObserver.hpp  VisionMessage.h  vis.cc
src/lola/iface/include/: README.txt  begin_pack.h  end_pack.h  iface.h  iface_calibration_camera.hpp  iface_hwio_lola.hpp  iface_model_lola.hpp  iface_msg.hpp  iface_ports.hpp  iface_prio.hpp  iface_ps.hpp  iface_robot_data_video.hpp  iface_rtlog_lola.hpp  iface_rtplot.hpp  iface_rtview.hpp  iface_rtview_lola.hpp  iface_sig.hpp  iface_sig_control.hpp  iface_sig_debug.hpp  iface_sig_hw.hpp  iface_sig_log.hpp  iface_sig_model.hpp  iface_sig_msg.hpp  iface_sig_vis.hpp  iface_sig_wpatt.hpp  iface_sig_wstab_prog.hpp  iface_ssv.hpp  iface_stepseq.hpp  iface_tum_color.h  iface_vis.h  iface_vision_msg.hpp  iface_wpatt_fsm.hpp  iface_wpatt_lola.hpp  iface_wstab_to_wpatt.hpp
src/lola/iface/tools/: CMakeLists.txt  README.md
src/lola/iface/tools/common/include/: sockets_common.hpp
src/lola/iface/tools/footstep_msg_server/: main.cpp
src/lola/iface/tools/pose_msg_client/: main.cpp
src/lola/iface/tools/pose_msg_server/: main.cpp
src/lola/iface/tools/vision_msg_client/: main.cpp
src/lola/iface/tools/vision_msg_server/: main.cpp
src/lola/pose/: PoseFileService.cpp  PoseFileService.hpp  PoseUdpService.cpp  PoseUdpService.hpp
src/network_tools/mock_client/: main.cpp
src/network_tools/mock_server/: main.cpp
src/script/: angle_calc.sh  mixed_scene_axis.sh  mixed_scene_step.sh  surface_calc.sh  trace-eval.py  velocity_calc.sh  volume_calc_axis.sh  volume_calc_step.sh
